<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDZL_xzNm9HBCe_l-MxeVtM7zZ4AX2CrD0</string>
    <string name="default_notification_channel_id">1</string>
    <string name="facebook_app_id" translatable="false">3030201213866787</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3030201213866787</string>
    <string name="cab_booking_new" translatable="false">Cab Booking </string>
    <string name="pickup_new" translatable="false">Pickup Delivery </string>
    <string name="ambulance" translatable="false"> Ambulance </string>
    <string name="please_select_all_variants">Please select all variants</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="by_creating_account_you_agree">Please check terms and conditions</string>
    <string name="enter_you_mobile_no">Enter your number to get started</string>
    <string name="slogan">Connecting your needs in\nseconds</string>
    <string name="resend_otp">Resend ?</string>
    <string name="resend_otp_code">Resend the verification code</string>
    <string name="edit_this_number">Edit this number</string>
    <string name="whats_your_name">Hey! What’s your name</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Rating</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bookings">Bookings</string>
    <string name="promotions">Promotions</string>
    <string name="payments">Payments</string>
    <string name="referral">Referral</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="sign_out">Sign out</string>
    <string name="back">Back</string>
    <string name="location">Location</string>
    <string name="enter_drop_off_location">Enter Drop off Location</string>
    <string name="enter_pickup_location">Enter pickup location</string>
    <string name="enter_details_of_order">Enter Product Details</string>
    <string name="select_brand">Select brand</string>
    <string name="select_capacity">Select capacity</string>
    <string name="select_quantity">Select quantity</string>
    <string name="next">Next</string>
    <string name="total">Total</string>
    <string name="cash">Cash Payment</string>
    <string name="promo">Promo Code</string>
    <string name="book">Book</string>
    <string name="we_are_requesting_your_request">We are processing your request</string>
    <string name="cancel">Cancel</string>
    <string name="invoice">Invoice</string>
    <string name="base_fair">Base fare</string>
    <string name="tax">Tax</string>
    <string name="rate">Rate</string>
    <string name="add_comments_here">Add a comment here…</string>
    <string name="submit">Submit</string>
    <string name="phone_validation_message">Please enter a valid phone number</string>
    <string name="otp_validation_message">Please enter a valid OTP.</string>
    <string name="name_empty_validation_message">Please enter your firstname.</string>
    <string name="fullname_empty_validation_message">Please enter your lastname.</string>
    <string name="gender_empty_validation_message">Please select your gender.</string>
    <string name="address_empty_validation_message">Please enter your address.</string>
    <string name="request_cancelled_successfully">Your request has been cancelled.</string>
    <string name="no_route_exits">No route exists</string>
    <string name="type_reason_for_cancellation">Reason for cancellation</string>
    <string name="write_your_msg_here">Write a message here…</string>
    <string name="cancellation_reason_validation_text">Please enter cancellation reason.</string>
    <string name="currency">Rs</string>
    <string name="pickup_address_validation_message">Please select a valid pickup address.</string>
    <string name="finish">Finish</string>
    <string name="gas">Gas</string>
    <string name="water_tanker">Water Tanker</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="tow">Breakdown Recovery</string>
    <string name="freight">Pickup &amp; Delivery</string>
    <string name="fire_brigade">Fire Brigade</string>
    <string name="e_workshop">E-Workshop</string>
    <string name="currently_no_driver_available">Currently, no driver available.</string>
    <string name="ongoing_request_cancelled_by_driver">Your ongoing request has been cancelled by the driver.</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="card">Card</string>
    <string name="default_selecting_token_error">You cannot select E-Tokens as a default payment method.</string>
    <string name="e_tokens">E-Tokens</string>
    <string name="e_token">E-Token</string>
    <string name="left">left</string>
    <string name="purchased">Purchased</string>
    <string name="offers_available_near_you">Offers available near you</string>
    <string name="available">available</string>
    <string name="no_offers_available">No offers available</string>
    <string name="buy_etoken">Buy E-Token</string>
    <string name="buy_etoken_confirmation">Are you sure you want to buy this e-token?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_e_tokens">View E-Tokens</string>
    <string name="select">Select</string>
    <string name="select_e_token">Select E-Tokens</string>
    <string name="excellent">Excellent</string>
    <string name="very_good">Very Good</string>
    <string name="good">Good</string>
    <string name="sad">Sad</string>
    <string name="very_sad">Very Sad</string>
    <string name="rating_validation_msg">Please select rating to continue.</string>
    <string name="validations_success">Validation success</string>
    <string name="booking_details">Booking Details</string>
    <string name="drop_off_location">Drop off location</string>
    <string name="no_bookings">No Bookings</string>
    <string name="like_buraq24_n_nshare_with_the_friends">Like Gomove?\nShare with the friends.</string>
    <string name="share">Share</string>
    <string name="contact_us_msg_hint">Write a message here directly to reach us…</string>
    <string name="no_email_app_installed">There are no email clients installed.</string>
    <string name="send_mail_to_buraq">Send mail to Company</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="we_will_reach_soon">We got your message. We will reach you soon.</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="coming_soon">Coming soon</string>
    <string name="buraq_24">Gomove</string>
    <string name="error">Error</string>
    <string name="api_error_msg">Error occurred on server. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="otp_resent_successfully">OTP resend successfully</string>
    <string name="change_language">Change Language</string>
    <string name="enter_otp_on">A verification code will be sent to your cellphone  </string>
    <string name="reach_us_via_phone">Reach us via phone</string>
    <string name="reach_us_via_mail">Reach us via mail</string>
    <string name="no_contacts">No contacts</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="urdu">اردو</string>
    <string name="chinese">中文</string>
    <string name="arabic">العربية</string>
    <string name="sinhala">Sinhala</string>
    <string name="spanish">Spanish</string>
    <string name="schedule">Schedule</string>
    <string name="book_now">Book now</string>
    <string name="schedule_time_selection_validation_msg">Oops, you can only schedule booking 1 hour after now.</string>
    <string name="congratulations">Congratulations</string>
    <string name="service_booked_successfully">Your Ride is scheduled for</string>
    <string name="order_cancelled">Your order has been cancelled</string>
    <string name="save">Save</string>
    <string name="profile_updated_successfully">Profile updated successfully!</string>
    <string name="permission_required_to_select_image">Permission required to select image</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="dialog_select_your_choice">Select</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="about_us">About Us</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="Scheduled">Scheduled</string>
    <string name="select_location">Select Location</string>
    <string name="select_vehicle_type">Select vehicle type</string>
    <string name="select_sub_model">Select sub model</string>
    <string name="enter_approx_weight">Enter approx weight in Kg\'s...</string>
    <string name="enter_additional_information">Enter additional information...</string>
    <string name="upload_images">Upload images</string>
    <string name="view_deals">view deals available via companies</string>
    <string name="driver_accepted_request">Driver has accepted your request.</string>
    <string name="driver_is_on_the_way">Your request has been started.</string>
    <string name="driver_completing_nearby_order">Driver is completing nearby order.</string>
    <string name="new_label">New</string>
    <string name="other">Other</string>
    <string name="bookATaxi">Book a service</string>
    <string name="home">Home</string>
    <string name="my_bookings">My Bookings</string>
    <string name="help">Help</string>
    <string name="panic">Panic</string>
    <string name="travelPkg">Travel Packages</string>
    <string name="new_services">New services - Coming soon</string>
    <string name="panicDesc">Are you sure you want to send Panic Request to your nearby?</string>
    <string name="or">OR</string>
    <string name="notification">Notifications</string>
    <string name="payment_history">Payment History</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="logout">Logout</string>
    <string name="get_discounts">Share with friends</string>
    <string name="payment_methods">Payment Method</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="deliver_with_us">Deliver with us!</string>
    <string name="choose_option">Choose Option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="refer_earn">Refer &amp; earn</string>
    <string name="wallet">Wallet</string>
    <string name="my_wallet">My Wallet</string>
    <string name="watch_amp_earn">Watch &amp; Earn</string>
    <string name="my_earnings">My Earnings</string>
    <string name="add_location">Add Location</string>
    <string name="pleaseselectoption">Please select option:</string>
    <string name="by_search_address">By Search Address</string>
    <string name="select_from_map">Select From Map</string>
    <string name="become_driver">Become a driver</string>
    <string name="driver_told_to_cancel">Driver told to cancel</string>
    <string name="eta_was_to_long">ETA was too long</string>
    <string name="driver_not_reachable">Driver\'s call not reachable</string>
    <string name="slide_right">Slide Right to Accept</string>
    <string name="slide_left">Slide Left to Reject</string>
</resources>