<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/choose_option"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_camera_upload"
        android:drawableTint="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tvGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_photo"
        android:drawableTint="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/gallery"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>